--- a/CMS/Views/Shared/Components/UserDetail/Default.cshtml
+++ b/CMS/Views/Shared/Components/UserDetail/Default.cshtml
@@ -104,6 +104,17 @@
                 </li>
             </ul>
         </li>
+        <li class="siteIcon">
+            <a>View Preset and Theme</a>
+            <ul>
+                <li>
+                    <a asp-controller="Presets" asp-action="Index">All Preset</a>
+                </li>
+                <li>
+                    <a asp-controller="Themes" asp-action="Index">All Themes</a>
+                </li>
+            </ul>
+        </li>
     </ul>
     }
     else
