--- a/CMS/Views/Presets/Index.cshtml
+++ b/CMS/Views/Presets/Index.cshtml
@@ -127,14 +127,14 @@
                                     </td>
 
                                     <td>
-                                        <a asp-action="Edit" asp-route-id="@item.presetId" class="btn btn-success"style="width:80px;">Edit</a>
+                                        <a asp-action="Edit" asp-route-id="@item.presetId" class="btn btn-success" style="width:80px;">Edit</a>
                                         @*<a asp-action="Details" asp-route-id="@item.presetId" class="btn btn-info">Details</a>*@
-                                        <a asp-action="Delete" asp-route-id="@item.presetId" class="btn btn-danger"style="width:80px;">Delete</a>
+                                        <a asp-action="Delete" asp-route-id="@item.presetId" class="btn btn-danger" style="width:80px;">Delete</a>
                                         @{
                                             var parms = new Dictionary<string, string>
-                                                                                                                                                                                                                                                                                                                                                    {
-                                                                                                                                                                                                                                                                                                                                                        { "themeId", item.themeId.ToString() }
-                                                                                                                                                                                                                                                                                                                                                    };
+                                                                                                                                                                                                                                                                                                                                                                                {
+                                                                                                                                                                                                                                                                                                                                                                                    { "themeId", item.themeId.ToString() }
+                                                                                                                                                                                                                                                                                                                                                                                };
                                         }
                                         @*<a asp-action="ViewTheme" asp-route-id="@item.themeId" class="btn btn-default">View Theme</a>*@
                                     </td>
@@ -164,6 +164,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <input type="button" onclick="reset()" value="reset" class="btn btn-outline-primary" id="reset" hidden="hidden" />
     </div>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/bootstrap-suggest-plugin/dist/bootstrap-suggest.min.js"></script>
@@ -206,8 +209,12 @@
                         table.rows[i].style.display = "none";
                     }
                     if (newpage == 1) {
-                        for (n = newpage * showrows - showrows; n <= newpage * showrows; n++) {
-                            table.rows[n].style.display = "";
+                        try {
+                            for (n = newpage * showrows - showrows; n <= newpage * showrows; n++) {
+                                table.rows[n].style.display = "";
+                            }
+                        } catch{
+
                         }
                     } else {
                         for (var n = newpage * showrows - showrows + 1; n <= newpage * showrows; n++) {
@@ -275,6 +282,9 @@
                     indexId: 1, // data.value 的第几个数据，作为input输入框的显示的内容
                     // indexKey: 2, //data.value 的第几个数据，作为input输入框的内容
                     data: dataList,
+                    ignorecase: true,
+                    inputBgColor: '#fff',
+                    inputWarnColor: '#fff',
                     //listAlign: 'auto',
                     listStyle: {
                         'padding-top': 0, 'max-height': '375px', 'max-width': '300px',
@@ -296,9 +306,11 @@
             if (input.val() == "") {
                 searchflag = false;
                 PageSwitch(1);
-                for (var e = 0; e <= pageSum + 1; e++) {
-                    document.getElementsByClassName("page-item")[e].style.display = "";
-                }
+                //for (var e = 0; e <= pageSum + 1; e++) {
+                //    document.getElementsByClassName("page-item")[e].style.display = "";
+                //}
+                document.getElementById("pagebutton").style.display = "";
+                document.getElementById("reset").hidden = "hidden";
             } else {
                 for (var i = 1; i < rowSum; i++) {
                     table.rows[i].style.display = "none";
@@ -310,10 +322,16 @@
                         table.rows[i].style.display = "";
                     }
                 }
-                for (var e = 0; e <= pageSum + 1; e++) {
-                    document.getElementsByClassName("page-item")[e].style.display = "none";
-                }
+                //for (var e = 0; e <= pageSum + 1; e++) {
+                //    document.getElementsByClassName("page-item")[e].style.display = "none";
+                //}
+                document.getElementById("pagebutton").style.display = "none";
+                document.getElementById("reset").hidden = "";
             }
+        }
+        function reset() {
+            input.val("");
+            search();
         }
     </script>
 </body>
