--- a/CMS/Views/Students/Index.cshtml
+++ b/CMS/Views/Students/Index.cshtml
@@ -125,6 +125,9 @@
         </div>
     </div>
 </div>
+<div class="d-flex justify-content-center">
+    <input type="button" onclick="reset()" value="reset" class="btn btn-outline-primary" id="reset" hidden="hidden" />
+</div>
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/bootstrap-suggest-plugin/dist/bootstrap-suggest.min.js"></script>
 <script src="~/bootstrap-suggest-plugin/src/bootstrap-suggest.js"></script>
@@ -166,12 +169,13 @@
                     table.rows[i].style.display = "none";
                 }
                 if (newpage == 1) {
-                    for (n = newpage * showrows - showrows; n <= newpage * showrows; n++) {
-                        console.log(n);
-                        if (table.rows[n] != null) {
-                            table.rows[n].style.display = "";
+                    try {
+                        for (n = newpage * showrows - showrows; n <= newpage * showrows; n++) {
+                            if (table.rows[n] != null) {
+                                table.rows[n].style.display = "";
+                            }
                         }
-                    }
+                    } catch{}
                 } else {
                     for (var n = newpage * showrows - showrows + 1; n <= newpage * showrows; n++) {
                         table.rows[n].style.display = "";
@@ -238,6 +242,9 @@
                         indexId: 1, // data.value 的第几个数据，作为input输入框的显示的内容
                 // indexKey: 2, //data.value 的第几个数据，作为input输入框的内容
                 data: dataList,
+                ignorecase: true,
+                inputBgColor: '#fff',
+                inputWarnColor: '#fff', 
                 //listAlign: 'auto',
                 listStyle: {
                                 'padding-top': 0, 'max-height': '375px', 'max-width': '300px',
@@ -259,9 +266,11 @@
         if (input.val() == "") {
             searchflag = false;
             PageSwitch(1);
-            for (var e = 0; e <= pageSum + 1; e++) {
-                document.getElementsByClassName("page-item")[e].style.display = "";
-            }
+            //for (var e = 0; e <= pageSum + 1; e++) {
+            //    document.getElementsByClassName("page-item")[e].style.display = "";
+            //}
+            document.getElementById("pagebutton").style.display = "";
+            document.getElementById("reset").hidden = "hidden";
         } else {
             for (var i = 1; i < rowSum; i++) {
                 table.rows[i].style.display = "none";
@@ -273,9 +282,15 @@
                     table.rows[i].style.display = "";
                 }
             }
-            for (var e = 0; e <= pageSum + 1; e++) {
-                document.getElementsByClassName("page-item")[e].style.display = "none";
-            }
+            //for (var e = 0; e <= pageSum + 1; e++) {
+            //    document.getElementsByClassName("page-item")[e].style.display = "none";
+            //}
+            document.getElementById("pagebutton").style.display = "none";
+            document.getElementById("reset").hidden = "";
         }
+    }
+    function reset() {
+        input.val("");
+        search();
     }
 </script>
